portfolio page and studio

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@
   --popover-foreground: oklch(0.18 0 0);
   --primary: oklch(21.6% 0.006 56.043);
   --primary-foreground: oklch(0.98 0 0);
-  --secondary: #846660;
+  --secondary: #755f59;
   --secondary-foreground: oklch(0.22 0 0);
   --accent: #dab364;
   --accent-foreground: oklch(0.98 0 0);
